--- a/app/ai_chatbot.ipynb
+++ b/app/ai_chatbot.ipynb
@@ -64,7 +64,7 @@
     "ai_character_reply = response.choices[0].message.content\n",
     "\n",
     "print(\"\\nReceived response!\")\n",
-    "print(f\"🤖 {chosen_character}'s Reply: \\n\")\n",
+    "print(f\"{chosen_character}'s Reply: \\n\")\n",
     "print(f\"{ai_character_reply}\")\n"
    ],
    "id": "e335cdafc8842706",
